syntax = "proto3";

package orders;

import "common/currency.proto";

message Order {
  string id = 1;
  string user_id = 2;
  OrderState state = 3;
  Asset asset = 4;
  Price price = 5;
}

enum OrderState {
  ORDER_STATE_UNSPECIFIED = 0;
  ORDER_STATE_SUCCEEDED = 1;
  ORDER_STATE_FAILED = 2;
}

message Asset {
  string id = 1;
  AssetType asset_type = 2;
  string name = 3;
}

enum AssetType {
  ASSET_TYPE_UNSPECIFIED = 0;
  ASSET_TYPE_DAPPER_CREDIT = 1;
}

message Price {
  string amount = 1;
  currency.CurrencyType currency_type = 2;
}
